test/expected/reinterpret_cast_pv-c.out
reinterpret cast x into pointer to void
^
1: error: reinterpret_cast is not supported in C
